--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0"
+    "ember-cli-babel": "^5.0.0",
+    "addon-d": "taras/addon-d"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
