--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "addon-d": "taras/addon-d"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "after": ["addon-d"]
   }
 }
